# Minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  file1  ft_builtin.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_free.c  ft_lexer.c  ft_lexer2.c  ft_move_proc.c  ft_pars_words.c  ft_pars_words1.c  ft_parser.c  ft_parser1.c  ft_path_utils.c  ft_proc.c  ft_pwd.c  ft_signal.c  ft_unset.c  ft_utils_builtin.c  ft_utils_envp.c  ft_utils_lexer.c  ft_utils_lexer2.c  ft_utils_pars.c  ft_utils_pars_dollar.c  ft_utils_parser2.c  ft_utils_print_export.c  ft_utils_show.c  minishell  minishell.c  minishell.h
libft/: Makefile  ft_atoi.c  ft_countwords.c  ft_getword.c  ft_getword_mod.c  ft_isalpha.c  ft_lstadd_back.c  ft_lstnew.c  ft_strcat.c  ft_strcdup.c  ft_strjoin.c  ft_strjoin_free.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  get_next_line.c  get_next_line_utils.c  libft.h
minishell_Linux/: Makefile  ft_builtin.c  ft_env.c  ft_lexer.c  ft_path_utils.c  ft_proc.c  ft_pwd.c  ft_signal.c  ft_user_pars.c  ft_utils_lexer2.c  ft_utils_pars.c  ft_utils_redirect.c  minishell.h
minishell_Linux/libft/: Makefile
minishell_MAC_OS/: Makefile  ft_exit.c  ft_export.c  ft_lexer.c  ft_parser.c  ft_proc.c  ft_unset.c  ft_utils_pars.c  ft_utils_pars_dollar.c  ft_utils_print_export.c  ft_utils_proc.c  minishell  minishell.c
minishell_MAC_OS/libft/: libft.h
